Fixes overlap issue with featured work cards and menu

--- a/src/scss/sections/sections/_landing.scss
+++ b/src/scss/sections/sections/_landing.scss
@@ -10,6 +10,10 @@
         display: flex;
         flex-direction: column;
         gap: 1.25rem;
+
+        @media(min-width: 40rem) {
+            padding-top: 5rem;
+        }
     }
 
     .socials {
